--- a/medial-queries3/main.css
+++ b/medial-queries3/main.css
@@ -1,3 +1,83 @@
 body {
   background: peachpuff;
 }
+
+* {
+  border: 1px solid black;
+  box-sizing: border-box;
+ 15,80 +14,53  body {
+  flex-wrap: wrap;
+}
+}
+
+header {
+  width: 100%;
+  height: 10em;
+  margin-bottom: 1em;
+}
+
+
+header, footer, aside,   {
+  flex-grow: 1;
+  margin: .5em;
+  max-height: 10vh;
+}
+aside {
+  width: 100%;
+}
+
+aside  {
+  display: flex;
+  flex-wrap: wrap;
+  min-height: 82vh;
+  justify-content: space-between;
+  flex: 1;
+  width: 70%;
+  flex-grow: 1;
+}
+
+aside > div {
+  margin: .5em;
+  min-width: 20%;
+  flex-basis: 22%;
+}
+
+
+
+main {
+  flex-grow: 3;
+  margin: .5em;
+  flex-basis: 4;
+  width: 50%;
+  flex-grow: 4;
+}
+
+@media (min-width: 600px) {
+  .container {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  
+  header {
+    width: 100%;
+    max-height: 10vh;
+  }
+  aside {
+    width: 80%;
+    flex: 4;
+    height: 70vh;
+    align-items: center;
+    margin-right: 1em;
+  }
+  aside > div {
+    height: 10em;
+  }
+
+  main {
+    align-self: stretch;
+    flex: 1;
+    width: 90%;
+    flex: 2;
+  }
+}
+
